{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "d4b976e4-eb97-40fc-8af0-273fcbbde172",
            "actions": [
                {
                    "name": "PhysicalMovement",
                    "type": "Value",
                    "id": "7d377001-e8d3-494d-b031-4eb36741fdb5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchMovement",
                    "type": "Value",
                    "id": "750dcdf3-f527-4505-a47c-1d9ae4879414",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touched",
                    "type": "Button",
                    "id": "0847dbd1-bd73-424f-8971-c531e7c119aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3a7bf045-1f10-4228-b485-bf5ecb1ee0fe",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8790548d-2c94-4c87-8af9-29d29768f21f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d4644157-06fb-4ea5-b101-65baa3093a1c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2dfdda18-95e4-4f78-86f2-2a519c8ad112",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3a2e6842-cf43-4559-a57d-41b9bc3a8f23",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f45f5423-2fc4-4fb0-ab75-80e766ba231d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb2415d3-1db2-4027-8136-ae4b4a886b78",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f823012d-7605-48c7-b770-e61a1b1f6e21",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d97a4448-b140-421c-a145-ec045c1cef6c",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.5,y=0.5)",
                    "groups": "DefaultControlScheme",
                    "action": "TouchMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc8da027-e677-488b-bb47-4099b9812784",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "727bd5da-07e9-42cb-9d82-915dabe9ee0b",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Touched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb4db72c-f757-4aa1-9e4c-18d16c954ddc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Touched",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "DefaultControlScheme",
            "bindingGroup": "DefaultControlScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<HID::Twin USB Joystick>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}